# Chest

./: README.md  SetClearActivity.bat  SetClearData.bat  SetRecorderActivity.bat  SetVideocallActivity.bat  build.gradle  gradle.properties  local.properties
mylibrary/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
mylibrary/jnibuild/: CMakeCache.txt
mylibrary/src/androidTest/java/com/stur/lib/: ExampleInstrumentedTest.java
mylibrary/src/main/: AndroidManifest.xml
mylibrary/src/main/assets/: iccid-conf.xml  un_settings_conf.xml
mylibrary/src/main/cpp/HeapdumpTest/: Android.mk  heapdumptest.c
mylibrary/src/main/java/android_serialport_api/: SerialPortFinder.java
mylibrary/src/main/java/com/stur/lib/: AdbUtils.java  AlarmUtils.java  AudioUtils.java  Constant.java  DisplayUtil.java  Features.java  GsonUtils.java  ImageUtil.java  IntegerUtil.java  LedUtils.java  Log.java  MediaUtils.java  PackageUtils.java  PowerUtils.java  QRCode.java  ReflectUtil.java  ReflectUtils.java  SharedPreferenceUtils.java  StConstant.java  StatusBarUtils.java  StringUtils.java  SystemPropertiesProxy.java  SystemUIUtils.java  TimerUtils.java  UIHelper.java  UsbUtils.java  Utils.java
mylibrary/src/main/java/com/stur/lib/app/: AppManager.java  (+2 more)
mylibrary/src/main/res/drawable/: ic_more.xml  ic_ok.xml  ic_previous.xml  ic_sd_card_48dp.xml  ic_search.xml  last_button_selector.xml  shape_color_cursor.xml  togglearrow.xml
mylibrary/src/main/res/layout/: activity_base.xml  activity_bluetooth.xml  activity_bluetooth_chat.xml  activity_bluetooth_devices.xml  activity_camera.xml  activity_camera_glsfview.xml  activity_camera_texture.xml  activity_diffuse.xml  activity_file_view.xml  activity_filestransfer.xml  activity_location.xml  activity_nanohttpdserver.xml  activity_qrcode.xml  activity_recorder.xml  activity_splash.xml  activity_stream_encoder.xml  activity_viewgroup.xml  activity_welcome.xml  activity_wifi.xml  def_ids.xml  dialog_customize.xml  fragment_blank.xml  list_group.xml  list_item.xml  list_item_view.xml  view_back_next_titlebar.xml  view_back_titlebar.xml  view_searchbar.xml  view_simple_titlebar.xml
mylibrary/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  strings.xml  styles_better_list.xml  styles_theme.xml
mylibrary/src/main/res/values-zh-rCN/: strings.xml
mylibrary/src/test/java/com/stur/lib/: ExampleUnitTest.java
(+401 files in other folders)
